# advent-of-code-2022

./: .gitignore  README.md  pyproject.toml
day01/: __init__.py  test_me.py
day02/: __init__.py  puzzle  test_me.py
day03/: __init__.py  puzzle  test_me.py
day04/: __init__.py  puzzle  test_me.py
day05/: __init__.py  __main__.py  puzzle  test_me.py
day06/: __init__.py  test_me.py
day07/: __init__.py  test_me.py
day08/: __init__.py  puzzle  test_me.py
day09/: __init__.py  puzzle  test_me.py
day10/: __init__.py  puzzle  test_me.py
day12/: __init__.py  test_me.py
shared/: __init__.py
skel/: test_me.py
