[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = "Advent of Code 2022"
authors = ["Nate Plamondon <nplamondon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
